@@ -34,6 +34,7 @@ import java.util.SortedSet;
 import java.util.TreeSet;
 import java.util.UUID;
 import java.util.concurrent.TimeUnit;
+import java.util.stream.Collectors;
 
 import org.apache.accumulo.core.client.Accumulo;
 import org.apache.accumulo.core.client.AccumuloClient;
@@ -85,7 +86,6 @@ import org.apache.accumulo.proxy.thrift.AccumuloProxy;
 import org.apache.accumulo.proxy.thrift.BatchScanOptions;
 import org.apache.accumulo.proxy.thrift.ColumnUpdate;
 import org.apache.accumulo.proxy.thrift.CompactionReason;
-import org.apache.accumulo.proxy.thrift.CompactionStrategyConfig;
 import org.apache.accumulo.proxy.thrift.CompactionType;
 import org.apache.accumulo.proxy.thrift.Condition;
 import org.apache.accumulo.proxy.thrift.ConditionalStatus;
@@ -123,8 +123,8 @@ import com.google.common.cache.RemovalNotification;
 public class ProxyServer implements AccumuloProxy.Iface {
 
   public static final Logger logger = LoggerFactory.getLogger(ProxyServer.class);
-  public static final String RPC_ACCUMULO_PRINCIPAL_MISMATCH_MSG = "RPC"
-      + " principal did not match requested Accumulo principal";
+  public static final String RPC_ACCUMULO_PRINCIPAL_MISMATCH_MSG =
+      "RPC principal did not match requested Accumulo principal";
 
   protected AccumuloClient client;
 
@@ -147,8 +147,9 @@ public class ProxyServer implements AccumuloProxy.Iface {
     public void onRemoval(RemovalNotification<UUID,BatchWriterPlusProblem> notification) {
       try {
         BatchWriterPlusProblem value = notification.getValue();
-        if (value.exception != null)
+        if (value.exception != null) {
           throw value.exception;
+        }
         notification.getValue().writer.close();
       } catch (MutationsRejectedException e) {
         logger.warn("MutationsRejectedException", e);
@@ -182,6 +183,7 @@ public class ProxyServer implements AccumuloProxy.Iface {
   protected Cache<UUID,BatchWriterPlusProblem> writerCache;
   protected Cache<UUID,ConditionalWriter> conditionalWriterCache;
 
+  @SuppressWarnings("unused")
   private final ThriftServerType serverType;
 
   public ProxyServer(Properties props) {
@@ -195,8 +197,8 @@ public class ProxyServer implements AccumuloProxy.Iface {
       throw new RuntimeException(e);
     }
 
-    final String serverTypeStr = props.getProperty(Proxy.THRIFT_SERVER_TYPE,
-        Proxy.THRIFT_SERVER_TYPE_DEFAULT);
+    final String serverTypeStr =
+        props.getProperty(Proxy.THRIFT_SERVER_TYPE, Proxy.THRIFT_SERVER_TYPE_DEFAULT);
     ThriftServerType tempServerType = Proxy.DEFAULT_SERVER_TYPE;
     if (!Proxy.THRIFT_SERVER_TYPE_DEFAULT.equals(serverTypeStr)) {
       tempServerType = ThriftServerType.get(serverTypeStr);
@@ -241,8 +243,9 @@ public class ProxyServer implements AccumuloProxy.Iface {
   private void handleAccumuloSecurityException(AccumuloSecurityException e)
       throws org.apache.accumulo.proxy.thrift.TableNotFoundException,
       org.apache.accumulo.proxy.thrift.AccumuloSecurityException {
-    if (e.getSecurityErrorCode().equals(SecurityErrorCode.TABLE_DOESNT_EXIST))
+    if (e.getSecurityErrorCode().equals(SecurityErrorCode.TABLE_DOESNT_EXIST)) {
       throw new org.apache.accumulo.proxy.thrift.TableNotFoundException(e.toString());
+    }
     throw new org.apache.accumulo.proxy.thrift.AccumuloSecurityException(e.toString());
   }
 
@@ -333,8 +336,6 @@ public class ProxyServer implements AccumuloProxy.Iface {
       org.apache.accumulo.proxy.thrift.AccumuloSecurityException, TException {
     try {
       throw ex;
-    } catch (AccumuloException e) {
-      throw new org.apache.accumulo.proxy.thrift.AccumuloException(e.toString());
     } catch (AccumuloSecurityException e) {
       throw new org.apache.accumulo.proxy.thrift.AccumuloSecurityException(e.toString());
     } catch (Exception e) {
@@ -388,7 +389,8 @@ public class ProxyServer implements AccumuloProxy.Iface {
   @Override
   public void compactTable(String login, String tableName, ByteBuffer startRow, ByteBuffer endRow,
       List<org.apache.accumulo.proxy.thrift.IteratorSetting> iterators, boolean flush, boolean wait,
-      CompactionStrategyConfig compactionStrategy)
+      org.apache.accumulo.proxy.thrift.PluginConfig selectorConfig,
+      org.apache.accumulo.proxy.thrift.PluginConfig configurerConfig)
       throws org.apache.accumulo.proxy.thrift.AccumuloSecurityException,
       org.apache.accumulo.proxy.thrift.TableNotFoundException,
       org.apache.accumulo.proxy.thrift.AccumuloException, TException {
@@ -397,12 +399,26 @@ public class ProxyServer implements AccumuloProxy.Iface {
           .setStartRow(ByteBufferUtil.toText(startRow)).setEndRow(ByteBufferUtil.toText(endRow))
           .setIterators(getIteratorSettings(iterators)).setFlush(flush).setWait(wait);
 
-      if (compactionStrategy != null) {
-        org.apache.accumulo.core.client.admin.CompactionStrategyConfig ccc = new org.apache.accumulo.core.client.admin.CompactionStrategyConfig(
-            compactionStrategy.getClassName());
-        if (compactionStrategy.options != null)
-          ccc.setOptions(compactionStrategy.options);
-        compactionConfig.setCompactionStrategy(ccc);
+      if (selectorConfig != null) {
+        Map<String,String> options =
+            selectorConfig.options == null ? Map.of() : selectorConfig.options;
+
+        org.apache.accumulo.core.client.admin.PluginConfig spc =
+            new org.apache.accumulo.core.client.admin.PluginConfig(selectorConfig.getClassName(),
+                options);
+
+        compactionConfig.setSelector(spc);
+      }
+
+      if (configurerConfig != null) {
+        Map<String,String> options =
+            configurerConfig.options == null ? Map.of() : configurerConfig.options;
+
+        org.apache.accumulo.core.client.admin.PluginConfig cpc =
+            new org.apache.accumulo.core.client.admin.PluginConfig(configurerConfig.getClassName(),
+                options);
+
+        compactionConfig.setConfigurer(cpc);
       }
 
       getConnector(login).tableOperations().compact(tableName, compactionConfig);
@@ -424,15 +440,14 @@ public class ProxyServer implements AccumuloProxy.Iface {
     }
   }
 
-  private List<IteratorSetting> getIteratorSettings(
-      List<org.apache.accumulo.proxy.thrift.IteratorSetting> iterators) {
-    List<IteratorSetting> result = new ArrayList<>();
-    if (iterators != null) {
-      for (org.apache.accumulo.proxy.thrift.IteratorSetting is : iterators) {
-        result.add(getIteratorSetting(is));
-      }
+  private List<IteratorSetting>
+      getIteratorSettings(List<org.apache.accumulo.proxy.thrift.IteratorSetting> iterators) {
+
+    if (iterators == null) {
+      return List.of();
     }
-    return result;
+
+    return iterators.stream().map(this::getIteratorSetting).collect(Collectors.toList());
   }
 
   @Override
@@ -442,13 +457,15 @@ public class ProxyServer implements AccumuloProxy.Iface {
       org.apache.accumulo.proxy.thrift.AccumuloSecurityException,
       org.apache.accumulo.proxy.thrift.TableExistsException, TException {
     try {
-      if (type == null)
+      if (type == null) {
         type = org.apache.accumulo.proxy.thrift.TimeType.MILLIS;
+      }
 
-      NewTableConfiguration tConfig = new NewTableConfiguration()
-          .setTimeType(TimeType.valueOf(type.toString()));
-      if (!versioningIter)
+      NewTableConfiguration tConfig =
+          new NewTableConfiguration().setTimeType(TimeType.valueOf(type.toString()));
+      if (!versioningIter) {
         tConfig = tConfig.withoutDefaultIterators();
+      }
       getConnector(login).tableOperations().create(tableName, tConfig);
     } catch (TableExistsException e) {
       throw new org.apache.accumulo.proxy.thrift.TableExistsException(e.toString());
@@ -510,8 +527,8 @@ public class ProxyServer implements AccumuloProxy.Iface {
       org.apache.accumulo.proxy.thrift.AccumuloSecurityException,
       org.apache.accumulo.proxy.thrift.TableNotFoundException, TException {
     try {
-      Map<String,Set<Text>> groups = getConnector(login).tableOperations()
-          .getLocalityGroups(tableName);
+      Map<String,Set<Text>> groups =
+          getConnector(login).tableOperations().getLocalityGroups(tableName);
       Map<String,Set<String>> ret = new HashMap<>();
       for (Entry<String,Set<Text>> entry : groups.entrySet()) {
         Set<String> value = new HashSet<>();
@@ -577,13 +594,10 @@ public class ProxyServer implements AccumuloProxy.Iface {
       org.apache.accumulo.proxy.thrift.AccumuloSecurityException,
       org.apache.accumulo.proxy.thrift.TableNotFoundException, TException {
     try {
-      Collection<Text> splits = getConnector(login).tableOperations().listSplits(tableName,
-          maxSplits);
-      List<ByteBuffer> ret = new ArrayList<>();
-      for (Text split : splits) {
-        ret.add(TextUtil.getByteBuffer(split));
-      }
-      return ret;
+      Collection<Text> splits =
+          getConnector(login).tableOperations().listSplits(tableName, maxSplits);
+
+      return splits.stream().map(TextUtil::getByteBuffer).collect(Collectors.toList());
     } catch (Exception e) {
       handleExceptionTNF(e);
       return null;
@@ -734,8 +748,8 @@ public class ProxyServer implements AccumuloProxy.Iface {
       org.apache.accumulo.proxy.thrift.AccumuloSecurityException,
       org.apache.accumulo.proxy.thrift.TableNotFoundException, TException {
     try {
-      List<org.apache.accumulo.core.client.admin.DiskUsage> diskUsages = getConnector(login)
-          .tableOperations().getDiskUsage(tables);
+      List<org.apache.accumulo.core.client.admin.DiskUsage> diskUsages =
+          getConnector(login).tableOperations().getDiskUsage(tables);
       List<DiskUsage> retUsages = new ArrayList<>();
       for (org.apache.accumulo.core.client.admin.DiskUsage diskUsage : diskUsages) {
         DiskUsage usage = new DiskUsage();
@@ -789,10 +803,11 @@ public class ProxyServer implements AccumuloProxy.Iface {
       org.apache.accumulo.proxy.thrift.AccumuloSecurityException, TException {
     List<org.apache.accumulo.proxy.thrift.ActiveScan> result = new ArrayList<>();
     try {
-      List<ActiveScan> activeScans = getConnector(login).instanceOperations()
-          .getActiveScans(tserver);
+      List<ActiveScan> activeScans =
+          getConnector(login).instanceOperations().getActiveScans(tserver);
       for (ActiveScan scan : activeScans) {
-        org.apache.accumulo.proxy.thrift.ActiveScan pscan = new org.apache.accumulo.proxy.thrift.ActiveScan();
+        org.apache.accumulo.proxy.thrift.ActiveScan pscan =
+            new org.apache.accumulo.proxy.thrift.ActiveScan();
         pscan.client = scan.getClient();
         pscan.user = scan.getUser();
         pscan.table = scan.getTable();
@@ -801,12 +816,13 @@ public class ProxyServer implements AccumuloProxy.Iface {
         pscan.type = ScanType.valueOf(scan.getType().toString());
         pscan.state = ScanState.valueOf(scan.getState().toString());
         TabletId e = scan.getTablet();
-        pscan.extent = new org.apache.accumulo.proxy.thrift.KeyExtent(e.getTableId().toString(),
+        pscan.extent = new org.apache.accumulo.proxy.thrift.KeyExtent(e.getTable().toString(),
             TextUtil.getByteBuffer(e.getEndRow()), TextUtil.getByteBuffer(e.getPrevEndRow()));
         pscan.columns = new ArrayList<>();
         if (scan.getColumns() != null) {
           for (Column c : scan.getColumns()) {
-            org.apache.accumulo.proxy.thrift.Column column = new org.apache.accumulo.proxy.thrift.Column();
+            org.apache.accumulo.proxy.thrift.Column column =
+                new org.apache.accumulo.proxy.thrift.Column();
             column.setColFamily(c.getColumnFamily());
             column.setColQualifier(c.getColumnQualifier());
             column.setColVisibility(c.getColumnVisibility());
@@ -820,8 +836,9 @@ public class ProxyServer implements AccumuloProxy.Iface {
             String name = parts[0];
             int priority = Integer.parseInt(parts[1]);
             String classname = parts[2];
-            org.apache.accumulo.proxy.thrift.IteratorSetting settings = new org.apache.accumulo.proxy.thrift.IteratorSetting(
-                priority, name, classname, scan.getSsio().get(name));
+            org.apache.accumulo.proxy.thrift.IteratorSetting settings =
+                new org.apache.accumulo.proxy.thrift.IteratorSetting(priority, name, classname,
+                    scan.getSsio().get(name));
             pscan.iterators.add(settings);
           }
         }
@@ -847,15 +864,16 @@ public class ProxyServer implements AccumuloProxy.Iface {
 
     try {
       List<org.apache.accumulo.proxy.thrift.ActiveCompaction> result = new ArrayList<>();
-      List<ActiveCompaction> active = getConnector(login).instanceOperations()
-          .getActiveCompactions(tserver);
+      List<ActiveCompaction> active =
+          getConnector(login).instanceOperations().getActiveCompactions(tserver);
       for (ActiveCompaction comp : active) {
-        org.apache.accumulo.proxy.thrift.ActiveCompaction pcomp = new org.apache.accumulo.proxy.thrift.ActiveCompaction();
+        org.apache.accumulo.proxy.thrift.ActiveCompaction pcomp =
+            new org.apache.accumulo.proxy.thrift.ActiveCompaction();
         pcomp.age = comp.getAge();
         pcomp.entriesRead = comp.getEntriesRead();
         pcomp.entriesWritten = comp.getEntriesWritten();
         TabletId e = comp.getTablet();
-        pcomp.extent = new org.apache.accumulo.proxy.thrift.KeyExtent(e.getTableId().toString(),
+        pcomp.extent = new org.apache.accumulo.proxy.thrift.KeyExtent(e.getTable().toString(),
             TextUtil.getByteBuffer(e.getEndRow()), TextUtil.getByteBuffer(e.getPrevEndRow()));
         pcomp.inputFiles = new ArrayList<>();
         if (comp.getInputFiles() != null) {
@@ -869,9 +887,9 @@ public class ProxyServer implements AccumuloProxy.Iface {
         pcomp.iterators = new ArrayList<>();
         if (comp.getIterators() != null) {
           for (IteratorSetting setting : comp.getIterators()) {
-            org.apache.accumulo.proxy.thrift.IteratorSetting psetting = new org.apache.accumulo.proxy.thrift.IteratorSetting(
-                setting.getPriority(), setting.getName(), setting.getIteratorClass(),
-                setting.getOptions());
+            org.apache.accumulo.proxy.thrift.IteratorSetting psetting =
+                new org.apache.accumulo.proxy.thrift.IteratorSetting(setting.getPriority(),
+                    setting.getName(), setting.getIteratorClass(), setting.getOptions());
             pcomp.iterators.add(psetting);
           }
         }
@@ -936,12 +954,11 @@ public class ProxyServer implements AccumuloProxy.Iface {
       throws org.apache.accumulo.proxy.thrift.AccumuloException,
       org.apache.accumulo.proxy.thrift.AccumuloSecurityException, TException {
     try {
-      Set<String> auths = new HashSet<>();
-      for (ByteBuffer auth : authorizations) {
-        auths.add(ByteBufferUtil.toString(auth));
-      }
+      String[] auths =
+          authorizations.stream().distinct().map(ByteBufferUtil::toString).toArray(String[]::new);
+
       getConnector(login).securityOperations().changeUserAuthorizations(user,
-          new Authorizations(auths.toArray(new String[0])));
+          new Authorizations(auths));
     } catch (Exception e) {
       handleException(e);
     }
@@ -1130,11 +1147,9 @@ public class ProxyServer implements AccumuloProxy.Iface {
   }
 
   private Authorizations getAuthorizations(Set<ByteBuffer> authorizations) {
-    List<String> auths = new ArrayList<>();
-    for (ByteBuffer bbauth : authorizations) {
-      auths.add(ByteBufferUtil.toString(bbauth));
-    }
-    return new Authorizations(auths.toArray(new String[0]));
+    String[] auths = authorizations.stream().map(ByteBufferUtil::toString).toArray(String[]::new);
+
+    return new Authorizations(auths);
   }
 
   @Override
@@ -1169,11 +1184,12 @@ public class ProxyServer implements AccumuloProxy.Iface {
         }
         if (opts.columns != null) {
           for (ScanColumn col : opts.columns) {
-            if (col.isSetColQualifier())
+            if (col.isSetColQualifier()) {
               scanner.fetchColumn(ByteBufferUtil.toText(col.colFamily),
                   ByteBufferUtil.toText(col.colQualifier));
-            else
+            } else {
               scanner.fetchColumnFamily(ByteBufferUtil.toText(col.colFamily));
+            }
           }
         }
       }
@@ -1206,8 +1222,9 @@ public class ProxyServer implements AccumuloProxy.Iface {
       } else {
         auth = accumuloClient.securityOperations().getUserAuthorizations(accumuloClient.whoami());
       }
-      if (opts != null && opts.threads > 0)
+      if (opts != null && opts.threads > 0) {
         threads = opts.threads;
+      }
 
       BatchScanner scanner = accumuloClient.createBatchScanner(tableName, auth, threads);
 
@@ -1226,9 +1243,9 @@ public class ProxyServer implements AccumuloProxy.Iface {
           ranges.add(new Range());
         } else {
           for (org.apache.accumulo.proxy.thrift.Range range : opts.ranges) {
-            Range aRange = new Range(
-                range.getStart() == null ? null : Util.fromThrift(range.getStart()), true,
-                range.getStop() == null ? null : Util.fromThrift(range.getStop()), false);
+            Range aRange =
+                new Range(range.getStart() == null ? null : Util.fromThrift(range.getStart()), true,
+                    range.getStop() == null ? null : Util.fromThrift(range.getStop()), false);
             ranges.add(aRange);
           }
         }
@@ -1236,11 +1253,12 @@ public class ProxyServer implements AccumuloProxy.Iface {
 
         if (opts.columns != null) {
           for (ScanColumn col : opts.columns) {
-            if (col.isSetColQualifier())
+            if (col.isSetColQualifier()) {
               scanner.fetchColumn(ByteBufferUtil.toText(col.colFamily),
                   ByteBufferUtil.toText(col.colQualifier));
-            else
+            } else {
               scanner.fetchColumnFamily(ByteBufferUtil.toText(col.colFamily));
+            }
           }
         }
       }
@@ -1352,8 +1370,9 @@ public class ProxyServer implements AccumuloProxy.Iface {
     try {
       bwpe = getWriter(login, tableName, null);
       addCellsToWriter(cells, bwpe);
-      if (bwpe.exception != null)
+      if (bwpe.exception != null) {
         throw bwpe.exception;
+      }
       bwpe.writer.flush();
     } catch (Exception e) {
       handleExceptionMRE(e);
@@ -1371,8 +1390,9 @@ public class ProxyServer implements AccumuloProxy.Iface {
   private static final ColumnVisibility EMPTY_VIS = new ColumnVisibility();
 
   void addCellsToWriter(Map<ByteBuffer,List<ColumnUpdate>> cells, BatchWriterPlusProblem bwpe) {
-    if (bwpe.exception != null)
+    if (bwpe.exception != null) {
       return;
+    }
 
     HashMap<Text,ColumnVisibility> vizMap = new HashMap<>();
 
@@ -1395,8 +1415,9 @@ public class ProxyServer implements AccumuloProxy.Iface {
         viz = getCahcedCV(vizMap, update.getColVisibility());
       }
       byte[] value = new byte[0];
-      if (update.isSetValue())
+      if (update.isSetValue()) {
         value = update.getValue();
+      }
       if (update.isSetTimestamp()) {
         if (update.isSetDeleteCell() && update.isDeleteCell()) {
           m.putDelete(update.getColFamily(), update.getColQualifier(), viz, update.getTimestamp());
@@ -1456,8 +1477,9 @@ public class ProxyServer implements AccumuloProxy.Iface {
       org.apache.accumulo.proxy.thrift.MutationsRejectedException, TException {
     try {
       BatchWriterPlusProblem bwpe = getWriter(writer);
-      if (bwpe.exception != null)
+      if (bwpe.exception != null) {
         throw bwpe.exception;
+      }
       bwpe.writer.flush();
     } catch (MutationsRejectedException e) {
       throw new org.apache.accumulo.proxy.thrift.MutationsRejectedException(e.toString());
@@ -1473,8 +1495,9 @@ public class ProxyServer implements AccumuloProxy.Iface {
       org.apache.accumulo.proxy.thrift.MutationsRejectedException, TException {
     try {
       BatchWriterPlusProblem bwpe = getWriter(writer);
-      if (bwpe.exception != null)
+      if (bwpe.exception != null) {
         throw bwpe.exception;
+      }
       bwpe.writer.close();
       writerCache.invalidate(UUID.fromString(writer));
     } catch (UnknownWriter uw) {
@@ -1505,14 +1528,18 @@ public class ProxyServer implements AccumuloProxy.Iface {
       throws Exception {
     BatchWriterConfig cfg = new BatchWriterConfig();
     if (opts != null) {
-      if (opts.maxMemory != 0)
+      if (opts.maxMemory != 0) {
         cfg.setMaxMemory(opts.maxMemory);
-      if (opts.threads != 0)
+      }
+      if (opts.threads != 0) {
         cfg.setMaxWriteThreads(opts.threads);
-      if (opts.timeoutMs != 0)
+      }
+      if (opts.timeoutMs != 0) {
         cfg.setTimeout(opts.timeoutMs, TimeUnit.MILLISECONDS);
-      if (opts.latencyMs != 0)
+      }
+      if (opts.latencyMs != 0) {
         cfg.setMaxLatency(opts.latencyMs, TimeUnit.MILLISECONDS);
+      }
       if (opts.isSetDurability() && opts.durability != null) {
         cfg.setDurability(getDurability(opts.getDurability()));
       }
@@ -1538,8 +1565,8 @@ public class ProxyServer implements AccumuloProxy.Iface {
     throw new IllegalArgumentException("Invalid durability value: " + durability.ordinal());
   }
 
-  private IteratorSetting getIteratorSetting(
-      org.apache.accumulo.proxy.thrift.IteratorSetting setting) {
+  private IteratorSetting
+      getIteratorSetting(org.apache.accumulo.proxy.thrift.IteratorSetting setting) {
     return new IteratorSetting(setting.priority, setting.name, setting.iteratorClass,
         setting.getProperties());
   }
@@ -1548,8 +1575,8 @@ public class ProxyServer implements AccumuloProxy.Iface {
     return IteratorScope.valueOf(scope.toString().toLowerCase());
   }
 
-  private EnumSet<IteratorScope> getIteratorScopes(
-      Set<org.apache.accumulo.proxy.thrift.IteratorScope> scopes) {
+  private EnumSet<IteratorScope>
+      getIteratorScopes(Set<org.apache.accumulo.proxy.thrift.IteratorScope> scopes) {
     EnumSet<IteratorScope> scopes_ = EnumSet.noneOf(IteratorScope.class);
     for (org.apache.accumulo.proxy.thrift.IteratorScope scope : scopes) {
       scopes_.add(getIteratorScope(scope));
@@ -1557,10 +1584,10 @@ public class ProxyServer implements AccumuloProxy.Iface {
     return scopes_;
   }
 
-  private EnumSet<org.apache.accumulo.proxy.thrift.IteratorScope> getProxyIteratorScopes(
-      Set<IteratorScope> scopes) {
-    EnumSet<org.apache.accumulo.proxy.thrift.IteratorScope> scopes_ = EnumSet
-        .noneOf(org.apache.accumulo.proxy.thrift.IteratorScope.class);
+  private EnumSet<org.apache.accumulo.proxy.thrift.IteratorScope>
+      getProxyIteratorScopes(Set<IteratorScope> scopes) {
+    EnumSet<org.apache.accumulo.proxy.thrift.IteratorScope> scopes_ =
+        EnumSet.noneOf(org.apache.accumulo.proxy.thrift.IteratorScope.class);
     for (IteratorScope scope : scopes) {
       scopes_.add(
           org.apache.accumulo.proxy.thrift.IteratorScope.valueOf(scope.toString().toUpperCase()));
@@ -1667,8 +1694,8 @@ public class ProxyServer implements AccumuloProxy.Iface {
       org.apache.accumulo.proxy.thrift.AccumuloSecurityException,
       org.apache.accumulo.proxy.thrift.TableNotFoundException, TException {
     try {
-      Map<String,EnumSet<IteratorScope>> iterMap = getConnector(login).tableOperations()
-          .listIterators(tableName);
+      Map<String,EnumSet<IteratorScope>> iterMap =
+          getConnector(login).tableOperations().listIterators(tableName);
       Map<String,Set<org.apache.accumulo.proxy.thrift.IteratorScope>> result = new HashMap<>();
       for (Map.Entry<String,EnumSet<IteratorScope>> entry : iterMap.entrySet()) {
         result.put(entry.getKey(), getProxyIteratorScopes(entry.getValue()));
@@ -1703,11 +1730,7 @@ public class ProxyServer implements AccumuloProxy.Iface {
     try {
       Set<Range> ranges = getConnector(login).tableOperations().splitRangeByTablets(tableName,
           getRange(range), maxSplits);
-      Set<org.apache.accumulo.proxy.thrift.Range> result = new HashSet<>();
-      for (Range r : ranges) {
-        result.add(getRange(r));
-      }
-      return result;
+      return ranges.stream().map(this::getRange).collect(Collectors.toSet());
     } catch (Exception e) {
       handleExceptionTNF(e);
       return null;
@@ -1720,8 +1743,9 @@ public class ProxyServer implements AccumuloProxy.Iface {
   }
 
   private org.apache.accumulo.proxy.thrift.Key getProxyKey(Key k) {
-    if (k == null)
+    if (k == null) {
       return null;
+    }
     org.apache.accumulo.proxy.thrift.Key result = new org.apache.accumulo.proxy.thrift.Key(
         TextUtil.getByteBuffer(k.getRow()), TextUtil.getByteBuffer(k.getColumnFamily()),
         TextUtil.getByteBuffer(k.getColumnQualifier()),
@@ -1955,7 +1979,8 @@ public class ProxyServer implements AccumuloProxy.Iface {
       org.apache.accumulo.proxy.thrift.AccumuloSecurityException,
       org.apache.accumulo.proxy.thrift.NamespaceNotFoundException, TException {
     try {
-      Map<String,Set<org.apache.accumulo.proxy.thrift.IteratorScope>> namespaceIters = new HashMap<>();
+      Map<String,Set<org.apache.accumulo.proxy.thrift.IteratorScope>> namespaceIters =
+          new HashMap<>();
       for (Map.Entry<String,EnumSet<IteratorScope>> entry : getConnector(login)
           .namespaceOperations().listIterators(namespaceName).entrySet()) {
         namespaceIters.put(entry.getKey(), getProxyIteratorScopes(entry.getValue()));
@@ -2052,8 +2077,8 @@ public class ProxyServer implements AccumuloProxy.Iface {
     props.putAllStrings(properties);
     AuthenticationToken token;
     try {
-      token = tokenClass.newInstance();
-    } catch (InstantiationException | IllegalAccessException e) {
+      token = tokenClass.getDeclaredConstructor().newInstance();
+    } catch (ReflectiveOperationException e) {
       logger.error("Error constructing authentication token", e);
       throw new AccumuloException(e);
     }
@@ -2084,14 +2109,18 @@ public class ProxyServer implements AccumuloProxy.Iface {
       if (options.getMaxMemory() != 0) {
         // TODO
       }
-      if (options.isSetThreads() && options.getThreads() != 0)
+      if (options.isSetThreads() && options.getThreads() != 0) {
         cwc.setMaxWriteThreads(options.getThreads());
-      if (options.isSetTimeoutMs() && options.getTimeoutMs() != 0)
+      }
+      if (options.isSetTimeoutMs() && options.getTimeoutMs() != 0) {
         cwc.setTimeout(options.getTimeoutMs(), TimeUnit.MILLISECONDS);
-      if (options.isSetAuthorizations() && options.getAuthorizations() != null)
+      }
+      if (options.isSetAuthorizations() && options.getAuthorizations() != null) {
         cwc.setAuthorizations(getAuthorizations(options.getAuthorizations()));
-      if (options.isSetDurability() && options.getDurability() != null)
+      }
+      if (options.isSetDurability() && options.getDurability() != null) {
         cwc.setDurability(getDurability(options.getDurability()));
+      }
 
       ConditionalWriter cw = getConnector(login).createConditionalWriter(tableName, cwc);
 
@@ -2126,19 +2155,22 @@ public class ProxyServer implements AccumuloProxy.Iface {
         ConditionalMutation cmut = new ConditionalMutation(ByteBufferUtil.toBytes(cu.getKey()));
 
         for (Condition tcond : cu.getValue().conditions) {
-          org.apache.accumulo.core.data.Condition cond = new org.apache.accumulo.core.data.Condition(
-              tcond.column.getColFamily(), tcond.column.getColQualifier());
+          org.apache.accumulo.core.data.Condition cond =
+              new org.apache.accumulo.core.data.Condition(tcond.column.getColFamily(),
+                  tcond.column.getColQualifier());
 
           if (tcond.getColumn().getColVisibility() != null
               && tcond.getColumn().getColVisibility().length > 0) {
             cond.setVisibility(getCahcedCV(vizMap, tcond.getColumn().getColVisibility()));
           }
 
-          if (tcond.isSetValue())
+          if (tcond.isSetValue()) {
             cond.setValue(tcond.getValue());
+          }
 
-          if (tcond.isSetTimestamp())
+          if (tcond.isSetTimestamp()) {
             cond.setTimestamp(tcond.getTimestamp());
+          }
 
           if (tcond.isSetIterators()) {
             cond.setIterators(getIteratorSettings(tcond.getIterators())
